feat: OpenAI Text Generation OK